--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
   "name": "moment-hooks",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Incredibly awesome hooks",
-  "keywords": ["react", "react-hooks", "momentech", "hooks", "query"],
+  "keywords": [
+    "react",
+    "react-hooks",
+    "momentech",
+    "hooks",
+    "query"
+  ],
   "author": "Max Moeschinger",
   "license": "ISC",
   "homepage": "https://github.com/momentechnologies/moment-hooks#readme",
