--- a/package.json
+++ b/package.json
@@ -36,20 +36,20 @@
     "url": "https://github.com/momentechnologies/moment-hooks/issues"
   },
   "devDependencies": {
-    "@types/jest": "^24.0.17",
-    "@types/react": "^16.9.2",
-    "@types/react-router-dom": "^4.3.4",
+    "@types/jest": "^24.0.25",
+    "@types/react": "^16.9.17",
+    "@types/react-router-dom": "^5.1.3",
     "jest": "^24.9.0",
-    "prettier": "^1.18.2",
-    "react": "^16.8.0",
-    "react-dom": "^16.8.0",
-    "ts-jest": "^24.0.2",
-    "tslint": "^5.18.0",
+    "prettier": "^1.19.1",
+    "react": "^16.12.0",
+    "react-router-dom": "^5.1.2",
+    "ts-jest": "^24.3.0",
+    "tslint": "^5.20.1",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^3.5.3"
+    "typescript": "^3.7.4"
   },
   "dependencies": {
-    "query-string": "^6.8.2"
+    "query-string": "^6.9.0"
   },
   "peerDependencies": {
     "react": "^16.8.0",
