--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/jest": "^24.0.25",
     "@types/react": "^16.9.17",
     "@types/react-router-dom": "^5.1.3",
+    "@types/resize-observer-browser": "^0.1.4",
     "jest": "^24.9.0",
     "prettier": "^1.19.1",
     "react": "^16.12.0",
