--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "moment-hooks",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "Incredibly awesome hooks",
   "keywords": [
     "react",
@@ -20,7 +20,7 @@
   "scripts": {
     "test": "jest --config jest.config.json",
     "build": "rm -rf lib/ && tsc",
-    "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
+    "format": "prettier --write \"src/**/*\"",
     "lint": "tslint -p tsconfig.json",
     "prepare": "npm run build",
     "prepublishOnly": "npm test && npm run lint",
