--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "scripts": {
     "test": "jest --config jest.config.json",
     "build": "rm -rf lib/ && tsc",
+    "watch": "rm -rf lib/ && tsc -w",
     "format": "prettier --write \"src/**/*\"",
     "lint": "tslint -p tsconfig.json",
     "prepare": "npm run build",
@@ -36,18 +37,18 @@
     "url": "https://github.com/momentechnologies/moment-hooks/issues"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.15",
-    "@types/react": "^16.9.55",
-    "@types/react-router-dom": "^5.1.6",
-    "@types/resize-observer-browser": "^0.1.4",
-    "jest": "^26.6.3",
-    "prettier": "^2.1.2",
+    "@types/jest": "^27.0.3",
+    "@types/react": "^17.0.37",
+    "@types/react-router-dom": "^5.3.2",
+    "@types/resize-observer-browser": "^0.1.6",
+    "jest": "^27.3.1",
+    "prettier": "^2.4.1",
     "react": "^16.12.0",
     "react-router-dom": "^5.2.0",
-    "ts-jest": "^26.4.3",
+    "ts-jest": "^27.0.7",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^4.0.5"
+    "typescript": "^4.5.2"
   },
   "dependencies": {
     "query-string": "^6.13.6"
