--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "url": "https://github.com/momentechnologies/moment-hooks/issues"
   },
   "devDependencies": {
+    "@testing-library/react-hooks": "^7.0.2",
     "@types/jest": "^27.0.3",
     "@types/react": "^17.0.37",
     "@types/react-router-dom": "^5.3.2",
@@ -45,6 +46,7 @@
     "prettier": "^2.4.1",
     "react": "^16.12.0",
     "react-router-dom": "^5.2.0",
+    "react-test-renderer": "^17.0.2",
     "ts-jest": "^27.0.7",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
