--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "typescript": "^4.5.2"
   },
   "dependencies": {
-    "query-string": "^7.0.1"
+    "query-string": "7.x|6.x"
   },
   "peerDependencies": {
     "react": "^16.8.0",
