--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "@types/resize-observer-browser": "^0.1.6",
     "jest": "^27.3.1",
     "prettier": "^2.4.1",
-    "react": "^17.0.2",
+    "react": "17.x",
     "react-router-dom": "^5.2.0",
     "react-test-renderer": "^17.0.2",
     "ts-jest": "^27.0.7",
@@ -56,7 +56,7 @@
     "query-string": "7.x|6.x"
   },
   "peerDependencies": {
-    "react": "^16.8.0",
-    "react-dom": "^16.8.0"
+    "react": "^16.8.0|17.x",
+    "react-dom": "^16.8.0|17.x"
   }
 }
