--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -12,15 +12,16 @@ jobs:
                 react:
                     - 16.8.6
                     - 17.0.0
-                node-version:
+                node:
                     - 14
                     - 16
+        name: 'Test (Node.js ${{ matrix.node }}, React ${{ matrix.react }})'
         steps:
             - uses: actions/checkout@v2
-            - name: Use Node.js ${{ matrix.node-version }}
+            - name: Use Node.js ${{ matrix.node }}
               uses: actions/setup-node@v2
               with:
-                  node-version: ${{ matrix.node-version }}
+                  node-version: ${{ matrix.node }}
 
             - name: Get yarn cache directory path
               id: yarn-cache-dir-path
@@ -30,9 +31,9 @@ jobs:
               id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
               with:
                   path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-                  key: ${{ runner.os }}-node-${{ matrix.node-version }}-yarn-${{ hashFiles('**/yarn.lock') }}
+                  key: ${{ runner.os }}-node-${{ matrix.node }}-react-${{ matrix.react }}-yarn-${{ hashFiles('**/yarn.lock') }}
                   restore-keys: |
-                      ${{ runner.os }}-node-${{ matrix.node-version }}-yarn-
+                      ${{ runner.os }}-node-${{ matrix.node }}-react-${{ matrix.react }}-yarn-
 
             - name: 'Yarn install'
               run: yarn install --frozen-lockfile
