--- a/package.json
+++ b/package.json
@@ -45,8 +45,8 @@
     "jest": "^27.3.1",
     "prettier": "^2.4.1",
     "react": "17.x",
+    "react-dom": "17.x",
     "react-router-dom": "^5.2.0",
-    "react-test-renderer": "^17.0.2",
     "ts-jest": "^27.0.7",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
