--- a/package.json
+++ b/package.json
@@ -37,15 +37,14 @@
     "url": "https://github.com/momentechnologies/moment-hooks/issues"
   },
   "devDependencies": {
-    "@testing-library/react-hooks": "^7.0.2",
+    "@testing-library/react": "^13.3.0",
     "@types/jest": "^27.0.3",
-    "@types/react": "^17.0.37",
     "@types/react-router-dom": "^5.3.2",
     "@types/resize-observer-browser": "^0.1.6",
     "jest": "^27.3.1",
     "prettier": "^2.4.1",
-    "react": "17.x",
-    "react-dom": "17.x",
+    "react": "18.x",
+    "react-dom": "18.x",
     "react-router-dom": "^5.2.0",
     "ts-jest": "^27.0.7",
     "tslint": "^6.1.3",
@@ -53,10 +52,10 @@
     "typescript": "^4.5.2"
   },
   "dependencies": {
-    "query-string": "7.x|6.x"
+    "query-string": "^7.0.0"
   },
   "peerDependencies": {
-    "react": "^16.8.0|17.x",
-    "react-dom": "^16.8.0|17.x"
+    "react": "^16.8.0|17.x|18.x",
+    "react-dom": "^16.8.0|17.x|18.x"
   }
 }
