--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "query-string": "^7.0.0"
   },
   "peerDependencies": {
-    "react": "^16.8.0|17.x|18.x",
-    "react-dom": "^16.8.0|17.x|18.x"
+    "react": "^16.8.0 || 17.x || 18.x",
+    "react-dom": "^16.8.0 || 17.x || 18.x"
   }
 }
