--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "devDependencies": {
     "@testing-library/react": "^13.3.0",
     "@types/jest": "^27.0.3",
+    "@types/node": "^18.13.0",
     "@types/react-router-dom": "^5.3.2",
     "@types/resize-observer-browser": "^0.1.6",
     "jest": "^27.3.1",
@@ -52,10 +53,10 @@
     "typescript": "^4.5.2"
   },
   "dependencies": {
-    "query-string": "^7.0.0"
+    "query-string": "^8.1.0"
   },
   "peerDependencies": {
-    "react": "^16.8.0|17.x|18.x",
-    "react-dom": "^16.8.0|17.x|18.x"
+    "react": "^16.8.0 || 17.x || 18.x",
+    "react-dom": "^16.8.0 || 17.x || 18.x"
   }
 }
